--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,44 @@
-torch>=2.2.0
-torchvision>=0.17.0
-numpy==1.26.0
-Pillow==10.2.0
-transformers>=4.45.0
+annotated-types==0.7.0
+anyio==4.12.1
+av==16.1.0
+certifi==2026.1.4
+cffi==2.0.0
+charset-normalizer==3.4.4
+click==8.3.1
+colorama==0.4.6
+coloredlogs==15.0.1
+ctranslate2==4.6.3
+exceptiongroup==1.3.1
+faster-whisper==1.2.1
+filelock==3.20.3
+flatbuffers==25.12.19
+fsspec==2026.1.0
+h11==0.16.0
+hf-xet==1.2.0
+httpcore==1.0.9
+httpx==0.28.1
+huggingface_hub==1.3.4
+humanfriendly==10.0
+idna==3.11
+mpmath==1.3.0
+numpy==2.2.6
+ollama==0.6.1
+onnxruntime==1.23.2
+piper-tts==1.3.0
+protobuf==6.33.4
+pycparser==3.0
+pydantic==2.12.5
+pydantic_core==2.41.5
+pyreadline3==3.5.4
+PyYAML==6.0.3
+requests==2.32.5
+scipy==1.15.3
+shellingham==1.5.4
+sounddevice==0.5.5
+sympy==1.14.0
+tokenizers==0.22.2
+tqdm==4.67.1
+typer-slim==0.21.1
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+urllib3==2.6.3
